fix some spacing issues

--- a/src/app/organisms/emoji-board/EmojiBoard.scss
+++ b/src/app/organisms/emoji-board/EmojiBoard.scss
@@ -8,7 +8,7 @@
   display: flex;
   max-width: 90vw;
   max-height: 90vh;
-  
+
   &__content {
     @extend .cp-fx__item-one;
     @extend .cp-fx__column;
@@ -28,7 +28,7 @@
     @include dir.side(border, none, 1px solid var(--bg-surface-border));
 
     position: relative;
-    
+
     & .ic-btn-surface {
       opacity: 0.8;
     }
@@ -48,7 +48,7 @@
 .emoji-board__content__search {
   padding: var(--sp-extra-tight);
   position: relative;
-  
+
   & .ic-raw {
     position: absolute;
     @include dir.prop(left, var(--sp-normal), unset);
@@ -101,14 +101,14 @@
   --emoji-padding: 6px;
   position: relative;
   margin-bottom: var(--sp-normal);
-  
+
   &__header {
     position: sticky;
     top: 0;
     z-index: 99;
     background-color: var(--bg-surface);
 
-    @include dir.side(margin, var(--sp-extra-tight), 0);
+    @include dir.side(margin, var(--sp-extra-tight), var(--sp-extra-tight));
     padding: var(--sp-extra-tight) var(--sp-ultra-tight);
     text-transform: uppercase;
     box-shadow: 0 -4px 0 0 var(--bg-surface);
