--- a/src/app/organisms/room/PeopleDrawer.scss
+++ b/src/app/organisms/room/PeopleDrawer.scss
@@ -29,7 +29,7 @@
     & .people-search {
       --search-input-height: 40px;
       min-height: var(--search-input-height);
-  
+
       margin: 0 var(--sp-extra-tight);
 
       position: relative;
@@ -64,19 +64,19 @@
 .people-drawer__content {
   padding-top: var(--sp-extra-tight);
   padding-bottom: calc(2 * var(--sp-normal));
-  
+
   & .people-selector {
     padding: var(--sp-extra-tight);
     border-radius: var(--bo-radius);
     &__container {
-      @include dir.side(margin, var(--sp-extra-tight), 0);
+      @include dir.side(margin, var(--sp-extra-tight), var(--sp-extra-tight));
     }
   }
-  
+
   & .segmented-controls {
     display: flex;
     margin-bottom: var(--sp-extra-tight);
-    @include dir.side(margin, var(--sp-extra-tight), 0);
+    @include dir.side(margin, var(--sp-extra-tight), var(--sp-extra-tight));
   }
   & .segment-btn {
     flex: 1;
