--- a/src/app/organisms/sticker-board/StickerBoard.scss
+++ b/src/app/organisms/sticker-board/StickerBoard.scss
@@ -8,7 +8,7 @@
   display: flex;
 
   & > .scrollbar {
-    width: initial;    
+    width: initial;
     height: var(--sticker-board-height);
   }
 
@@ -40,8 +40,8 @@
       top: 0;
       z-index: 99;
       background-color: var(--bg-surface);
-  
-      @include dir.side(margin, var(--sp-extra-tight), 0);
+
+      @include dir.side(margin, var(--sp-extra-tight), var(--sp-extra-tight));
       padding: var(--sp-extra-tight) var(--sp-ultra-tight);
       text-transform: uppercase;
       box-shadow: 0 -4px 0 0 var(--bg-surface);
@@ -55,7 +55,7 @@
       gap: var(--sp-normal) var(--sp-tight);
 
       img {
-        width: 76px;  
+        width: 76px;
         height: 76px;
         object-fit: contain;
         cursor: pointer;
